# jupyter-extension

./: .gitignore  README.md  RELEASE.md
.github/workflows/: build.yml
docs/source/: conf.py  index.rst
docs/source/_templates/: footer.html
docs/source/install/: install.rst
docs/source/pycompss_jupyter_kernel/: overview.rst  start_stop.rst
docs/source/pycompss_jupyterlab_extension/: decorator.rst  execution_info.rst  monitor.rst  overview.rst  reference.rst  start_stop.rst
ipycompss_kernel/: LICENSE  MANIFEST.in  README.md  hatch_build.py  pyproject.toml
ipycompss_kernel/ipycompss_kernel/: __init__.py  __main__.py  _version.py  bool_parameter.py  controller.py  enum_parameter.py  int_parameter.py  ipycompss_kernel.py  ipycompss_provisioner.py  messaging.py  monitor.py  parameter_factory.py  path_parameter.py  popup.py  start_pycompss.py  start_workers.sh  startup_popup.py  str_parameter.py  utils.py
ipycompss_kernel/ipycompss_kernel/kernel/: __init__.py  ipycompss_kernel.py  logging_aspect.py
ipycompss_kernel/ipycompss_kernel/kernel/info/: __init__.py  info.py  messaging.py
ipycompss_kernel/ipycompss_kernel/kernel/monitor/: __init__.py  messaging.py  monitor.py
ipycompss_kernel/ipycompss_kernel/kernel/start_stop/: __init__.py  messaging.py  start_stop.py
ipycompss_kernel/ipycompss_kernel/kernel/status/: __init__.py  messaging.py  status.py
ipycompss_kernel/ipycompss_kernel/outer_component/: __init__.py  info.py  panel.py  popup.py  start_stop.py  start_workers.sh
ipycompss_kernel/ipycompss_kernel/outer_component/info/: __init__.py  info.py  panel.py
ipycompss_kernel/ipycompss_kernel/outer_component/monitor/: __init__.py  monitor.py
ipycompss_kernel/ipycompss_kernel/outer_component/parameter/: __init__.py  base.py  bool.py  enum.py  factory.py  int.py  label.py  path.py  str.py
ipycompss_kernel/ipycompss_kernel/outer_component/start_stop/: __init__.py  popup.py  start_stop.py
ipycompss_kernel/ipycompss_kernel/parameter/: base.py  bool.py  enum.py  factory.py  int.py  label.py  path.py  str.py
ipycompss_kernel/pycompss/: kernel.json
ipycompss_lab_extension/: .gitignore  .prettierignore  README.md  install.json  package.json  pyproject.toml  tsconfig.json
ipycompss_lab_extension/.github/workflows/: build.yml  check-release.yml
ipycompss_lab_extension/ipycompss_lab_extension/: __init__.py
ipycompss_lab_extension/src/: activate.tsx  collapsible-element.tsx  compss_icon.ts  documentation-button.tsx  index.ts  index.tsx  start-button.tsx  svg.d.ts  tab-button.tsx  task-button.tsx  utils.ts  watcher.ts
ipycompss_lab_extension/src/__tests__/: ipycompss_lab_extension.spec.ts
ipycompss_lab_extension/src/documentation-button/: documentation-button-view.tsx  documentation-button.tsx  index.ts  view.tsx
ipycompss_lab_extension/src/icon/: bsc-icon.ts  compss-icon.ts  index.ts
ipycompss_lab_extension/src/info-button/: execution-info.ts  index.ts  info-button.tsx  messaging.ts  view.tsx
ipycompss_lab_extension/src/info-buttons/: execution-info.ts  index.ts  info-buttons.tsx  messaging.ts  view.tsx  widget-model.ts  widget-view.ts
ipycompss_lab_extension/src/monitor/: manager.ts  messaging.ts  monitor.tsx  view.tsx
ipycompss_lab_extension/src/parameter/: base.tsx  bool.tsx  enum.tsx  group-view.tsx  group.tsx  index.ts  int.tsx  parameter.ts  str.tsx
ipycompss_lab_extension/src/start-button/: messaging.ts  start-button.tsx  watcher.ts
ipycompss_lab_extension/src/start-stop/: index.ts  manager.ts  messaging.ts  start-button.tsx  start-stop.tsx  stop-button.tsx  view.tsx  watcher.ts
ipycompss_lab_extension/src/status/: manager.ts  messaging.ts  status.tsx
ipycompss_lab_extension/src/task-button/: index.ts  line-info.ts  task-button.tsx  task-dropdown.tsx
ipycompss_lab_extension/src/task-dropdown/: index.ts  line-info.ts  task-dropdown.tsx  view.tsx
ipycompss_lab_extension/style/: base.css  collapsible-element.css  documentation-button.css  index.css  parameter.css
ipycompss_lab_extension/ui-tests/: package.json
ipycompss_lab_extension/ui-tests/tests/: ipycompss_lab_extension.spec.ts
ipycompss_provisioner/: __init__.py  ipycompss_provisioner.py  pyproject.toml
pycompss/: kernel.json
