[build-system]
requires = ["hatchling>=1.4.0"]
build-backend = "hatchling.build"

[project]
name = "ipycompss-kernel"
readme = "../README.md"
license = { file = "../LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "comm",
    "ipykernel",
    "IPython",
    "jupyter_client",
    "pycompss"
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.entry-points."jupyter_client.kernel_provisioners"]
ipycompss-provisioner = "ipycompss_kernel:IPyCOMPSsProvisioner"

[tool.hatch.version]
path = "ipycompss_kernel/_version.py"

[tool.check-wheel-contents]
ignore = ["W002"]
