[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipycompss-provisioner"
dynamic = [
    "version",
]
description = "Provisioner for PyCOMPSs Jupyter kernel"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "ipykernel",
    "ipycompss_kernel",
    "jupyter_client",
]

[project.optional-dependencies]
test = [
  "jupyter_kernel_test",
]
[project.entry-points."jupyter_client.kernel_provisioners"]
ipycompss-provisioner = "ipycompss_provisioner:IPyCOMPSsProvisioner"
